src/test/ui/static/static-lifetime.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/static-lifetime.rs:3:20
   |
LL | impl<'a, A: Clone> Arbitrary for ::std::borrow::Cow<'a, A> {}
   |                    ^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime 'a as defined on the impl at 3:6
  --> $DIR/static-lifetime.rs:3:6
   |
LL | impl<'a, A: Clone> Arbitrary for ::std::borrow::Cow<'a, A> {}
   |      ^^
   = note: but lifetime parameter must outlive the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
